app/assets/stylesheets/video.css
.video-index-container {
  overflow-x: hidden;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.video-main-container {
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 56vw;
}

#video-main-empty {
  width: 100%;
  height: 45.5vw;
  content: "";
  z-index: -1;
}

.main-video {
  width: 100%;
  height: 56vw;
}

.video {
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 56vw;
  z-index: -1;
}

/* ------- BELOW MAIN VIDEO ------- */

.video-row-container {
  position: relative;
  /* top: 60px; */
  /* top: -25vh */
  width: 100%;
  display: flex;
  flex-direction: column;
}

.video-row-outer {
  display: flex;
  /* padding-bottom: 100px; */
  /* padding-bottom: 5%; */
  /* padding-left: 59px; */
  margin-bottom: 5%;
  position: relative;
  max-width: 100%;
  padding: 0 4%;
}

.video-row-inner {
  display: flex;
  
  /* transform: translateX(-400px);
  transition: all 3s ease-out; */
  
  /* animation-duration: 1.5s;
  animation-name: slidein; */

  overflow-x: visible;
  width: 100%;
  position: relative;
}

.video-demo-thumbnail {
  /* width: 15.2vw; */
  width: 100%;
  height: auto;
  z-index: -1;
}

.video-row-inner:hover .video-item {
   transform: translateX(-45%);
}

.video-item:hover ~ .video-item {
   transform: translateX(45%);
}

.video-item {
  list-style-type: none;
  /* background-color: white; */
  box-sizing: border-box;
  border: 1px solid white;
  flex-shrink: 0;

  /* width: 15.2vw; */
  width: 16.3333333337%;
  /* margin: 0px 2px; */

  height: auto;

  /* what happens when you hover over a thumbnail */
  /* transition: all .2s ease-in-out; */

  transition: all 300ms ease-out 200ms;
  position: relative;
  margin-right: .35%;
}

.video-text {
  position: absolute;
  right: 50%;
  bottom: 50%;
  color: white;
}

.video-item:hover {
  /* the scale by which the thumbnail expands */
  /* transform: scale(1.5); */

  transform: scale(1.9) !important;
}

/* ::-webkit-scrollbar {
    width: 0px;
    background: transparent;
} */

.left-button {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 5;
  width: 4%;
  background-color: rgba(255,255,255,0.4);
  left: 0;
}

.right-button {
  position: absolute;
  z-index: 5;
  right: 0;
  top: 0;
  bottom: 0;
  width: 4%;
  background-color: rgba(255,255,255,0.3);
}

@keyframes slidein {
  from {
    margin-left: 0%;
    width: 300%; 
  }

  to {
    margin-left: 100%;
    width: 100%;
  }
}

